--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,13 @@
 cmake_minimum_required(VERSION 2.20.0)
+project(WebrtcProxy)
+
 
 
 set(CMAKE_PREFIX_PATH C:/gstreamer/1.0/msvc_x86_64)
 set(INCLUDE_LIBRARY C:/gstreamer/1.0/msvc_x86_64/lib)
+
+enable_language(RC)
+set(CMAKE_RC_COMPILER windres)
 
 foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
     string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
@@ -19,40 +24,28 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_SOURCE_DIR}/bin)
 find_package(PkgConfig REQUIRED)
 
 pkg_check_modules(GLIB REQUIRED glib-2.0)
-pkg_check_modules(GIO REQUIRED gio-2.0)
 pkg_check_modules(GOBJECT REQUIRED gobject-2.0)
-pkg_check_modules(SDP REQUIRED gstreamer-sdp-1.0)
 pkg_check_modules(GST REQUIRED gstreamer-1.0)
-pkg_check_modules(JSON_GLIB REQUIRED json-glib-1.0)
-pkg_check_modules(LIBSOUP REQUIRED libsoup-2.4)
 pkg_check_modules(WEBRTC REQUIRED gstreamer-webrtc-1.0)
-pkg_check_modules(CONTROLLER REQUIRED gstreamer-controller-1.0)
 pkg_check_modules(VIDEO REQUIRED gstreamer-video-1.0)
 
 
 file(GLOB SOURCE_LIST 
 ${CMAKE_SOURCE_DIR}/cgo/*.cpp
+${CMAKE_SOURCE_DIR}/cgo/*.c
+${CMAKE_SOURCE_DIR}/listener/audio/*.cc
+${CMAKE_SOURCE_DIR}/listener/video/*.cc
 )
 
 add_library(shared STATIC ${SOURCE_LIST})
 
-
-
-
 target_include_directories(shared PUBLIC
-    ${CMAKE_SOURCE_DIR}/worker/session-webrtc/include
     ${CMAKE_SOURCE_DIR}/listener/audio
-    ${CMAKE_SOURCE_DIR}/listener/gstreamer
-    ${SHARED_HEADER}
-    ${LIBSOUP_INCLUDE_DIRS}
+    ${CMAKE_SOURCE_DIR}/listener/video
     ${GLIB_INCLUDE_DIRS} 
-    ${GIO_INCLUDE_DIRS} 
     ${GOBJECT_INCLUDE_DIRS}
-    ${SDP_INCLUDE_DIRS}
     ${GST_INCLUDE_DIRS}
-    ${JSON_GLIB_INCLUDE_DIRS}
     ${WEBRTC_INCLUDE_DIRS}
-    ${CONTROLLER_INCLUDE_DIRS}
     ${VIDEO_INCLUDE_DIRS}
 )
 
@@ -61,29 +54,26 @@ set_target_properties(shared PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
 target_compile_options(shared PUBLIC ${GLIB_CFLAGS})
-target_compile_options(shared PUBLIC ${GIO_CFLAGS})
 target_compile_options(shared PUBLIC ${GOBJECT_CFLAGS})
-target_compile_options(shared PUBLIC ${SDP_CFLAGS})
 target_compile_options(shared PUBLIC ${GST_CFLAGS})
-target_compile_options(shared PUBLIC ${JSON_GLIB_CFLAGS})
 target_compile_options(shared PUBLIC ${WEBRTC_CFLAGS})
 target_compile_options(shared PUBLIC ${VIDEO_CFLAGS})
-target_compile_options(shared PUBLIC ${CONTROLLER_CFLAGS})
 
 target_link_directories(shared PUBLIC ${INCLUDE_LIBRARY} )    
 
 target_link_libraries(shared PUBLIC 
-    ${LIBSOUP_LIBRARIES}
+	libstdc++.a
     ${GLIB_LIBRARIES} 
-    ${GIO_LIBRARIES} 
     ${GOBJECT_LIBRARIES}
-    ${SDP_LIBRARIES}
     ${GST_LIBRARIES}
-    ${JSON_GLIB_LIBRARIES}
     ${WEBRTC_LIBRARIES}
-    ${CONTROLLER_LIBRARIES}
     ${VIDEO_LIBRARIES}
 )
+
+set_target_properties(shared PROPERTIES CXX_STANDARD 17
+                               VERSION ${PROJECT_VERSION}
+                               SOVERSION ${PROJECT_VERSION_MAJOR})
+
 
 
 
