add device query tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_library(shared STATIC ${SOURCE_LIST})
 target_include_directories(shared PUBLIC
     ${CMAKE_SOURCE_DIR}/listener/audio
     ${CMAKE_SOURCE_DIR}/listener/video
+    ${CMAKE_SOURCE_DIR}/cmd/tool
     ${GLIB_INCLUDE_DIRS} 
     ${GOBJECT_INCLUDE_DIRS}
     ${GST_INCLUDE_DIRS}
