--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ ${CMAKE_SOURCE_DIR}/listener/video/*.cc
 add_library(shared STATIC ${SOURCE_LIST})
 
 target_include_directories(shared PUBLIC
+    ${CMAKE_SOURCE_DIR}/broadcaster/gstreamer 
     ${CMAKE_SOURCE_DIR}/listener/audio
     ${CMAKE_SOURCE_DIR}/listener/video
     ${CMAKE_SOURCE_DIR}/cmd/tool
