add audio test tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ target_include_directories(shared PUBLIC
     ${CMAKE_SOURCE_DIR}/broadcaster/gstreamer 
     ${CMAKE_SOURCE_DIR}/listener/audio
     ${CMAKE_SOURCE_DIR}/listener/video
-    ${CMAKE_SOURCE_DIR}/cmd/tool
+    ${CMAKE_SOURCE_DIR}/util/tool
     ${GLIB_INCLUDE_DIRS} 
     ${GOBJECT_INCLUDE_DIRS}
     ${GST_INCLUDE_DIRS}
